--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -42,8 +42,8 @@
       <div class="bground">
         <div class="content">
           <span class="close"></span>
-          <div class="modal-body">
-            <form name="reserve" action="index.html" method="get">
+          <div class="modal-body" id="formreservecont">
+            <form name="reserve" id="formreserve" action="index.html" method="get">
               <div class="formData">
                 <label for="first">Prénom</label>
                 <input class="text-control" type="text" id="first" name="first" minlength="2">
